python/testData/quickFixes/PyAddImportQuickFixTest/decimalCanonicalPath/main.py
<error descr="Unresolved reference 'Decimal'">Dec<caret>imal</error>